Looking to fix the overflow error in the ArticleCard.

--- a/frontend/src/components/_generic/parts/DraggableSubWindow.css
+++ b/frontend/src/components/_generic/parts/DraggableSubWindow.css
@@ -15,4 +15,5 @@
     flex-direction: column;
     position: relative;
     padding: 10px;
+    flex:1;
 }
