--- a/frontend/src/components/article/parts/ArticleCard.css
+++ b/frontend/src/components/article/parts/ArticleCard.css
@@ -1,10 +1,13 @@
 .articleCard {
-    width: 100%;
-    height: 718px;
-    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     padding-top: 10px;
+    overflow: scroll;
+
 }
 
 .articleCard .articleContent {
+    flex: 1;
     white-space: pre-wrap;
 }
